syntax = "proto3";

package openpolicyagency;

// The greeting service definition.
service Opaproto {
  // Get a Decision to Open Policies Agency
  rpc GetDecision (InputRequest) returns (ResultReply) {}
}

// The request message containing the input for eval authorisation.
message InputRequest {
  string kratos = 1;
  string eval = 2;
  int64 resource = 3;
  string role = 4;
  string method = 5;
  string uri = 6;
}

// The response message containing the decision
message ResultReply {
  string result = 1;
}